--- a/style.css
+++ b/style.css
@@ -68,6 +68,13 @@ section{
 .btn:hover{
     background-color: var(--light-color);
 }
+.flex-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+}
 .header{
     position: sticky;
     top: 0;left: 0;right: 0;
@@ -212,6 +219,90 @@ section{
     background-color: var(--white);
 }
 /* Category Sectoin end */
+
+/* Jobs Sectoin start */
+.jobs-container .box-container-jobs{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 35rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.jobs-container .box-container-jobs .box-jobs{
+    background-color: var(--white);
+    border-radius: .5rem;
+    border: var(--border);
+    padding: 2rem;
+    box-shadow: 4px .7rem 0 rgba(0, 0, 0, .2);
+    overflow-x: hidden;
+}
+.jobs-container .box-container-jobs .box-jobs .company{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+.jobs-container .box-container-jobs .box-jobs .company img{
+    height: 7rem;
+    width: 7rem;
+    object-fit: contain;
+}
+.jobs-container .box-container-jobs .box-jobs .company h3{
+    font-size: 2rem;
+    font-weight: 400;
+    color: var(--black);
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    margin-bottom: 0.5rem;
+}
+.jobs-container .box-container-jobs .box-jobs .company p{
+    color: var(--light-color);
+    font-size: 1.6rem;
+}
+.jobs-container .box-container-jobs .box-jobs .job-title{
+   font-size: 2rem;
+   color: var(--black);
+   overflow-x: hidden;
+   text-overflow: ellipsis;
+   font-weight: 400;
+}
+.jobs-container .box-container-jobs .box-jobs .location i{
+ margin-right: 0.5rem;
+ color: var(--light-color);
+ font-size: 2rem;
+}
+.jobs-container .box-container-jobs .box-jobs .tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1.5rem 0;
+}
+.jobs-container .box-container-jobs .box-jobs .tags p{
+    padding: 1rem 2rem;
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    font-size: 1.6rem;
+    color: var(--light-color);
+}
+.jobs-container .box-container-jobs .box-jobs .tags p i{
+    margin-right: 0.5rem;
+    color: var(--black);
+}
+.jobs-container .box-container-jobs .box-jobs .fa-heart{
+    background-color: var(--light-bg);
+    border-radius: .5rem;
+    color: var(--light-color);
+    font-size: 1.8rem;
+    height: 4rem;
+    width: 4.5rem;
+    line-height: 4rem;
+    cursor: pointer;
+}
+.jobs-container .box-container-jobs .box-jobs .fa-heart:hover{
+    background-color: var(--main-color);
+    color: var(--white);
+}
+/* Jobs Sectoin end */
+
 
 /* Footer Sectoin start */
 .footer .grid{
