--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');
 
 :root{
     --main-color: #433878;
@@ -74,6 +75,19 @@ section{
     justify-content: space-between;
     column-gap: 1rem;
     flex-wrap: wrap;
+}
+.section-title{
+border-top: 1px solid var(--main-color);
+border-bottom: 1px solid var(--main-color);
+background-color: var(--main-color);
+color: var(--white);
+text-align: center;
+/* padding: 1rem 2rem; */
+font-size: 5rem;
+text-transform: lowercase;
+font-family: "Playwrite DE Grund", cursive;
+font-weight: 300;
+text-shadow: 5px 5px 6px #9E9E9E;
 }
 .header{
     position: sticky;
@@ -302,6 +316,56 @@ section{
     color: var(--white);
 }
 /* Jobs Sectoin end */
+
+
+/* About Sectoin start */
+.about img{
+    width: 100%;
+    margin-bottom: 1.5rem;
+    object-fit: cover;
+}
+.about .box-about{
+    background-color: var(--white);
+    border-radius: .5rem;
+    border: var(--border);
+    padding: 3rem 1.5rem;
+    box-shadow: var(--box-shadow);
+}
+.about .box-about h3{
+    font-size: 3dvb;
+    color: var(--black);
+    margin-bottom: 1rem;
+    font-weight: 400;
+
+}
+.about .box-about p{
+    padding: 1rem 0;
+    line-height: 1.8;
+    color: var(--light-color);
+    font-size: 1.8rem;
+}
+/* About Sectoin end */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Footer Sectoin start */
