--- a/style.css
+++ b/style.css
@@ -346,6 +346,74 @@ text-shadow: 5px 5px 6px #9E9E9E;
 }
 /* About Sectoin end */
 
+/* Reviews Sectoin start */
+.reviews .box-container-reviews{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 35rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.reviews .box-container-reviews .box-reviews{
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    border-radius: .5rem;
+    padding: 2rem;
+}
+.reviews .box-container-reviews .box-reviews .stars{
+    margin-bottom: 1.5rem;
+}
+.reviews .box-container-reviews .box-reviews .stars i{
+    color: var(--main-color);
+    font-size: 1.8rem;
+}
+.reviews .box-container-reviews .box-reviews .title{
+    font-size: 2rem;
+    color: var(--black);
+    text-align: right;
+    font-weight: 300;
+}
+.reviews .box-container-reviews .box-reviews p{
+    text-align: right;
+    font-size: 1.6rem;
+    color: var(--light-color);
+    padding: 1rem 0;
+    line-height: 1.8rem;
+}
+.reviews .box-container-reviews .box-reviews .user{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+.reviews .box-container-reviews .box-reviews .user img{
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.reviews .box-container-reviews .box-reviews .user h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: 0.5erm;
+    font-weight: 500;
+}
+.reviews .box-container-reviews .box-reviews .user span{
+    color: var(--light-color);
+    font-size: 1.6rem;
+}
+/* Reviews Sectoin end */
+
+
+
+
+
+
+
+
+
+
 
 
 
