--- a/style.css
+++ b/style.css
@@ -406,6 +406,94 @@ text-shadow: 5px 5px 6px #9E9E9E;
 /* Reviews Sectoin end */
 
 
+/* job filter Sectoin end */
+.job-filter form{
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    border-radius: .5rem;
+    padding: 2rem;
+}
+.job-filter form .flex{
+   display: flex;
+   flex-wrap: wrap;
+   column-gap: 1rem;
+}
+.job-filter form .flex .box{
+    flex: 1 1 40rem;
+}
+.job-filter form .flex .box p{
+    font-size: 1.6rem;
+    color: var(--light-color);
+}
+.job-filter form .flex .box p span{
+    color: var(--red-color);
+}
+.job-filter form .flex .box .input{
+    width: 100%;
+    border-radius: .5rem;
+    padding: 1.4rem;
+    color: var(--black);
+    margin: 1rem 0;
+    background-color: var(--light-bg);
+}
+.job-filter form .dropdown-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.job-filter form .dropdown-container .dropdown{
+    flex: 1 1 20rem;
+    position: relative;
+}
+.job-filter form .dropdown-container .dropdown .output{
+    width: 100%;
+    background-color: var(--light-bg);
+    border-radius: .5rem;
+    padding: 1.4rem;
+    font-size: 1.8rem;
+    color: var(--black);
+    text-transform: capitalize;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+}
+.job-filter form .dropdown-container .dropdown .output:placeholder-shown{
+    text-transform: capitalize;
+}
+.job-filter form .dropdown-container .dropdown .lists{
+position: absolute;
+top: 100%;left: 0;right: 0;
+background-color: var(--white);
+padding: 1rem;
+border-radius: .5rem;
+border: var(--border);
+box-shadow: var(--box-shadow);
+z-index: 10;
+transform: scaleY(0);
+transform-origin: top;
+}
+.job-filter form .dropdown-container .dropdown .lists .items{
+    padding: 1.2rem 1.4rem;
+    border-radius: .5rem;
+    font-size: 1.8rem;
+    color: var(--black);
+    cursor: pointer;
+
+}
+.job-filter form .dropdown-container .dropdown .lists .items:hover{
+    background-color: var(--light-bg);
+}
+.job-filter form .dropdown-container .dropdown .lists:hover,
+.job-filter form .dropdown-container .dropdown:hover .lists,
+.job-filter form .dropdown-container .dropdown .lists .output:focus + .lists,
+.job-filter form .dropdown-container .dropdown .lists .output:focus-within + .lists{
+    transform: scaleY(1);
+    transition: .2s linear;
+}
+/* job filter Sectoin end */
+
+
 
 
 
