--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ section{
     background-color: var(--main-color);
     border-radius: .5rem;
     text-align: center;
+    text-transform: capitalize;
 }
 .btn:hover{
     background-color: var(--light-color);
@@ -75,6 +76,7 @@ section{
     justify-content: space-between;
     column-gap: 1rem;
     flex-wrap: wrap;
+    text-transform: capitalize;
 }
 .section-title{
 border-top: 1px solid var(--main-color);
@@ -317,7 +319,9 @@ text-shadow: 5px 5px 6px #9E9E9E;
 }
 /* Jobs Sectoin end */
 
+/* Home page end */
 
+/* About page start */
 /* About Sectoin start */
 .about img{
     width: 100%;
@@ -404,6 +408,10 @@ text-shadow: 5px 5px 6px #9E9E9E;
     font-size: 1.6rem;
 }
 /* Reviews Sectoin end */
+
+ /* About page end */ 
+
+ /* All_Jobs page start */ 
 
 
 /* job filter Sectoin end */
@@ -492,6 +500,95 @@ transform-origin: top;
     transition: .2s linear;
 }
 /* job filter Sectoin end */
+/* All_Jobs page end */
+
+/* View_job_page start */
+
+/* View Jobs section start */
+.job-details .details{
+    background-color: var(--white);
+    border-radius: .5rem;
+    border: var(--border);
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    overflow-x: hidden;
+}
+.job-details .details h3{
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    color: var(--black);
+    font-weight: 400;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
+.job-details .details .job-info a{
+    display: block;
+    font-size: 2rem;
+    color: var(--main-color);
+    font-weight: 500;
+    margin: 0.5rem 0;
+}
+.job-details .details .job-info a:hover{
+    text-decoration: underline;
+}
+.job-details .details .job-info p{
+    padding: 1rem 0;
+    font-size: 1.6rem;
+    color: var(--light-color);
+}
+.job-details .details .basic-details{
+    background-color: var(--light-bg);
+    margin: 1.5rem 0;
+    border-radius: .5rem;
+    padding: 2rem;
+}
+.job-details .details .basic-details p{
+    color: var(--light-color);
+    padding-bottom: 2rem;
+    font-size: 1.6rem;
+}
+.job-details .details ul {
+    margin: 1rem 0;
+}
+.job-details .details ul li{
+    padding: 1rem 0;
+    font-size: 1.6rem;
+    color: var(--light-color);
+    margin-left: 3rem;
+}
+.job-details .details .description{
+    margin-top: 1.5rem;
+}
+.job-details .details .description p{
+    font-size: 1.6rem;
+    color: var(--light-color);
+    line-height: 1.8;
+    padding: 1.5rem 0;
+}
+.job-details .details .save{
+    background-color: var(--light-bg);
+    border-radius: .5rem;
+    padding: 1rem 2rem;
+    cursor: pointer;
+    font-size: 1.8rem;
+    margin-top: 1rem;
+}
+.job-details .details .save i{
+    margin-right: 0.5rem;
+    color: var(--black);
+
+}
+.job-details .details .save:hover{
+   background-color: var(--main-color);
+  
+}
+.job-details .details .save:hover i{
+   color: var(--white);
+  
+}
+/* View Jobs section end */
+
+/* View_job_page end */
 
 
 
