add contact page

--- a/style.css
+++ b/style.css
@@ -643,6 +643,82 @@ padding: 2rem;
 
 /* view comapny page end */
 
+/* contact page start */
+
+.contact .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    gap: 1.5rem;
+   align-items: flex-start;
+   justify-content: center;
+}
+.contact .box-container .box{
+    background-color: var(--white);
+    border: var(--border);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    padding: 2rem;
+    text-align: center;
+}
+.contact .box-container .box i{
+    height: 4.5rem;
+    width: 5rem;
+    line-height: 4.5rem;
+    font-size: 2rem;
+    color: var(--black);
+    background-color: var(--light-bg);
+}
+.contact .box-container .box a{
+    display: block;
+    padding-top: 0.5rem;
+    font-size: 1.6rem;
+    color: var(--light-color);
+    line-height: 1.8rem;
+}
+.contact form{
+    margin-top: 2rem;
+    background-color: var(--white);
+    border: var(--border);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    padding: 3rem 2rem;
+}
+.contact form h3{
+    font-size: 2.5rem;
+    color: var(--black);
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+.contact form .flex{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+}
+.contact form .flex .box{
+    flex: 1 1 40rem;
+}
+.contact form .input{
+   width: 100%;
+   border-radius: .5rem;
+   padding: 1.4rem;
+   color: var(--black);
+   font-size: 1.8rem;
+   background-color: var(--light-bg); 
+}
+.contact form p {
+    text-align: left;
+    font-size: 1.6rem;
+    padding-top: 1rem;
+    color: var(--light-color);
+}
+.contact form p span{
+    color: var(--red-color);
+}
+.contact form textarea{
+    height: 15rem;
+    resize: none;
+}
+/* contact page end */
 
 
 
