add account page

--- a/style.css
+++ b/style.css
@@ -720,6 +720,61 @@ padding: 2rem;
 }
 /* contact page end */
 
+/* account page start */
+.account-form-container{
+    background: url('asserts/home-bg.jpg'), rgba(0,0,0,.3) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: color;  
+}
+.account-form-container .account-form{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.account-form-container .account-form form{
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    text-align: center;
+    width: 50rem;
+}
+
+.account-form-container .account-form h3{
+    font-size: 2.5rem;
+     color: var(--black);
+     margin-bottom: 1rem;
+     font-weight: 400;
+}
+
+.account-form-container .account-form .input{
+    font-size: 2.5rem;
+    margin: 1rem 0;
+    font-size: 1.8rem;
+    padding: 1.4rem;
+    background-color: var(--light-bg);
+    border-radius: .5rem;
+}
+
+.account-form-container .account-form p{
+ padding: 1rem 0;
+ font-size: 1.6rem;
+ color: var(--light-color);
+}
+
+.account-form-container .account-form p a{
+    color: var(--light-color);
+    font-size: 2rem;
+}
+.account-form-container .account-form p a:hover{
+    color: var(--black);
+    text-decoration: underline;
+}
+/* account page end */
+
 
 
 
